// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cashier - Demo Baisc-captcha 1`] = `
<div class="md-cashier">
  <div class="n22-popup with-mask bottom" style="">
    <div class="n22-popup-mask" style="" name="n22-mask-fade"></div>
    <div class="n22-popup-box n22-slide-up" style="" name="n22-slide-up">
      <div class="md-popup-title-bar">
        <div class="title-bar-left md-popup-cancel">
          <md-icon name="close" size="lg"></md-icon>
        </div>
        <div class="title-bar-title">
          <p class="title">支付</p>
          <!---->
        </div>
        <!---->
      </div>
      <div class="md-cashier-container">
        <div class="md-cashier-block md-cashier-captcha">
          <div class="md-captcha">
            <div class="md-captcha-content">
              <!---->
              <div class="md-captcha-message">
                <div>Verification code sent to 156 **** 8965</div>
              </div>
            </div>
            <div class="md-codebox-wrapper">
              <div class="md-codebox is-justify"><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span></div>
              <footer class="md-captcha-footer">
                <div class="md-captcha-brief">The latest verification code is still valid</div> <button class="md-captcha-btn">Send Verification code</button>
              </footer>
              <form action="" style="display: none;"><input type="text" maxlength="4" class="md-codebox-input"></form>
              <div class="md-number-keyboard md-codebox-keyboard in-view">
                <!---->
                <div class="md-number-keyboard-container simple">
                  <div class="keyboard-number">
                    <ul class="keyboard-number-list">
                      <li class="keyboard-number-item"><span>1</span></li>
                      <li class="keyboard-number-item"><span>2</span></li>
                      <li class="keyboard-number-item"><span>3</span></li>
                      <li class="keyboard-number-item"><span>4</span></li>
                      <li class="keyboard-number-item"><span>5</span></li>
                      <li class="keyboard-number-item"><span>6</span></li>
                      <li class="keyboard-number-item"><span>7</span></li>
                      <li class="keyboard-number-item"><span>8</span></li>
                      <li class="keyboard-number-item"><span>9</span></li>
                      <li class="keyboard-number-item no-bg"></li>
                      <li class="keyboard-number-item"><span>0</span></li>
                      <li class="keyboard-number-item no-bg delete"><span></span></li>
                    </ul>
                  </div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cashier - Demo Baisc-channel 1`] = `
<div class="n22-example-child n22-example-child-cashier">
  <div class="md-cashier">
    <div class="n22-popup with-mask bottom" style="display:none;">
      <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
      <div name="n22-slide-up" class="n22-popup-box n22-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel">
            <md-icon name="close" size="lg"></md-icon>
          </div>
          <div class="title-bar-title">
            <p class="title">支付</p>
            <!---->
          </div>
          <!---->
        </div>
        <div class="md-cashier-container">
          <div class="md-cashier-block md-cashier-choose">
            <div class="md-cashier-channel">
              <div class="choose-text">
                <p class="choose-title">支付金额(元)</p>
                <p class="choose-number">100.00</p>
                <p class="choose-describe">关于支付金额的特殊说明</p>
              </div>
              <div class="choose-channel">
                <div class="choose-channel-list">
                  <div class="md-cashier-channel-item default">
                    <div class="item-icon cashier-icon-1">
                      <svg-icon icon-class="cashier-icon-1"></svg-icon>
                    </div>
                    <div class="item-label">
                      <p class="title"><span>招商银行(0056)</span>
                        <!---->
                      </p>
                      <!---->
                    </div>
                    <div class="item-check-icon">
                      <svg-icon icon-class="checked"></svg-icon>
                    </div>
                  </div>
                </div>
                <div class="choose-channel-more">更多支付方式</div>
              </div>
              <div class="md-cashier-block-btn"><button type="button" class="n22-button md-cashier-pay-button primary active block">
                  <div class="n22-button-inner">
                    <!---->
                    <p class="n22-button-content">确定支付</p>
                  </div>
                </button></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cashier - Demo Baisc-fail 1`] = `
<div class="md-cashier">
  <div class="n22-popup with-mask bottom" style="">
    <div class="n22-popup-mask" style="" name="n22-mask-fade"></div>
    <div class="n22-popup-box n22-slide-up" style="" name="n22-slide-up">
      <div class="md-popup-title-bar">
        <div class="title-bar-left md-popup-cancel">
          <md-icon name="close" size="lg"></md-icon>
        </div>
        <div class="title-bar-title">
          <p class="title">支付</p>
          <!---->
        </div>
        <!---->
      </div>
      <div class="md-cashier-container">
        <div class="md-cashier-block md-cashier-fail">
          <div class="md-cashier-block-icon">
            <md-icon name="warn-color"></md-icon>
          </div>
          <div class="md-cashier-block-text">支付失败，请稍后重试</div>
          <div class="md-cashier-block-btn"><button type="button" class="n22-button primary active block">好的</button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cashier - Demo Baisc-success 1`] = `
<div class="md-cashier">
  <div class="n22-popup with-mask bottom" style="">
    <div class="n22-popup-mask" style="" name="n22-mask-fade"></div>
    <div class="n22-popup-box n22-slide-up" style="" name="n22-slide-up">
      <div class="md-popup-title-bar">
        <div class="title-bar-left md-popup-cancel">
          <md-icon name="close" size="lg"></md-icon>
        </div>
        <div class="title-bar-title">
          <p class="title">支付</p>
          <!---->
        </div>
        <!---->
      </div>
      <div class="md-cashier-container">
        <div class="md-cashier-block md-cashier-success">
          <div class="md-cashier-block-icon">
            <div class="n22-activity-indicator-rolling-success">
              <div class="n22-activity-indicator-rolling" radius="35">
                <div class="rolling-container"><svg viewBox="0 0 78.75 78.75" preserveAspectRatio="xMidYMid" class="n22-activity-indicator-svg rolling" style="width: 70px; height: 70px; transform: rotateZ(0deg);">
                    <circle fill="none" stroke="transparent" stroke-width="4.375" cx="39.375" cy="39.375" r="35"></circle>
                    <g name="circle">
                      <circle cx="39.375" cy="39.375" fill="#FFF6F1" stroke="none" r="35" class="success"></circle>
                    </g>
                  </svg>
                  <div class="content"> <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="right" style="transform: translate(-50%, -50%) scale(1);">
                      <g>
                        <line x1="32" y1="47" x2="45" y2="62" stroke-dasharray="20" style="stroke-width: 4.375; stroke: #2F86F6;"></line>
                        <line x1="42" y1="62" x2="68.4" y2="40" stroke-dasharray="35" style="stroke-width: 4.375; stroke: #2F86F6;"></line>
                      </g>
                    </svg></div>
                </div>
              </div>
            </div>
          </div>
          <div class="md-cashier-block-text">支付成功</div>
          <div class="md-cashier-block-btn"><button type="button" class="n22-button primary active block">好的</button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cashier - Demo Using slots and other configurations 1`] = `
<div class="n22-example-child n22-example-child-cashier">
  <div class="md-cashier">
    <div class="n22-popup with-mask bottom" style="display:none;">
      <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
      <div name="n22-slide-up" class="n22-popup-box n22-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel">
            <md-icon name="close" size="lg"></md-icon>
          </div>
          <div class="title-bar-title">
            <p class="title">支付</p>
            <!---->
          </div>
          <!---->
        </div>
        <div class="md-cashier-container">
          <div>
            <div class="n22-notice-bar warning">
              <div class="n22-notice-bar-left">
                <svg-icon icon-class="warn" class="n22-notice-svg n22-notice-icon"></svg-icon>
              </div>
              <div class="n22-notice-bar-content">
                <div>
                  该银行3:00-12:00系统维护，请更换其他银行卡
                </div>
              </div>
              <div class="n22-notice-bar-right">
                <svg-icon icon-class="close" class="n22-notice-svg md-notice-icon md-notice-icon-right"></svg-icon>
              </div>
            </div>
          </div>
          <div class="md-cashier-block md-cashier-choose">
            <div class="md-cashier-channel">
              <div class="choose-text">
                <p class="choose-title">支付金额(元)</p>
                <p class="choose-number">100.00</p>
                <p class="choose-describe">关于支付金额的特殊说明</p>
              </div>
              <div class="choose-channel">
                <div class="choose-channel-list">
                  <div class="md-cashier-channel-item default">
                    <div class="item-icon cashier-icon-1">
                      <svg-icon icon-class="cashier-icon-1"></svg-icon>
                    </div>
                    <div class="item-label">
                      <p class="title"><span>XX银行(1234)</span> <span class="title-active">更换</span></p>
                      <p class="desc">当前银行维护中</p>
                    </div>
                    <div class="item-check-icon">
                      <svg-icon icon-class="check"></svg-icon>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <div class="md-cashier-block-btn"><button type="button" class="n22-button md-cashier-pay-button primary active block">
                  <div class="n22-button-inner">
                    <!---->
                    <p class="n22-button-content">确定支付</p>
                  </div>
                </button></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
